Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-15231

ASSERTION( obd->obd_lu_dev->ld_site == lod->lod_dt_dev.dd_lu_dev.ld_site ) failed on mounting half-initilized MDS

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.17.0
    • Lustre 2.15.0
    • None
    • 3
    • 9223372036854775807

      When trying to mount a filesystem affected by LU-15083 we meet the below assertion failure

       

      [  314.106627] LustreError: 8224:0:(mgc_request.c:612:do_requeue()) failed processing log: -28
      [  314.125634] Lustre:    cmd=cf003 0:lustre-OST0000-osc-MDT0000  1:lustre-OST0000_UUID  2:192.168.200.102@tcp  [  315.165305] Lustre: DEBUG MARKER: oleg2-server.virtnet: executing set_default_debug vfstrace rpctrace dlmtrace neterror ha config ioctl super lfsck all 8
      [  321.493236] LDISKFS-fs (dm-3): mounted filesystem with ordered data mode. Opts: errors=remount-ro
      [  321.516915] LDISKFS-fs (dm-3): mounted filesystem with ordered data mode. Opts: errors=remount-ro,no_mbcache,nodelalloc
      [  321.519622] Lustre: lustre-OST0001-osd: enabled 'large_dir' feature on device /dev/mapper/ost2_flakey
      [  321.637711] Lustre: lustre-OST0001: new disk, initializing
      [  321.639323] Lustre: srv-lustre-OST0001: No data found on store. Initialize space: rc = -61
      [  321.673803] Lustre: lustre-OST0001: Imperative Recovery not enabled, recovery window 60-180
      [  323.693773] Lustre: DEBUG MARKER: oleg2-server.virtnet: executing set_default_debug vfstrace rpctrace dlmtrace neterror ha config ioctl super lfsck all 8
      [  327.506508] LustreError: 11097:0:(lod_lov.c:169:lod_add_device()) ASSERTION( obd->obd_lu_dev->ld_site == lod->lod_dt_dev.dd_lu_dev.ld_site ) failed: 
      [  327.509162] LustreError: 11097:0:(lod_lov.c:169:lod_add_device()) LBUG
      [  327.510382] Pid: 11097, comm: llog_process_th 5.4.159-vm-debug #1 SMP Sun Nov 14 19:15:25 EST 2021
      [  327.511956] Call Trace TBD:
      [  327.512693] [<0>] libcfs_call_trace+0x6b/0x90 [libcfs]
      [  327.513855] [<0>] lbug_with_loc+0x43/0x80 [libcfs]
      [  327.514780] [<0>] lod_add_device+0xdea/0x11d0 [lod]
      [  327.516674] [<0>] lod_process_config+0xea9/0xf90 [lod]
      [  327.517809] [<0>] obd_process_config.constprop.0+0x108/0x1a0 [obdclass]
      [  327.519378] [<0>] class_process_config+0x22df/0x3090 [obdclass]
      [  327.520153] [<0>] class_config_llog_handler+0x97f/0x1420 [obdclass]
      [  327.521102] [<0>] llog_process_thread+0xabe/0x19e0 [obdclass]
      [  327.522473] [<0>] llog_process_thread_daemonize+0xa0/0xe0 [obdclass]
      [  327.523687] [<0>] kthread+0x134/0x150
      [  327.524517] [<0>] ret_from_fork+0x24/0x50
      [  327.525531] Kernel panic - not syncing: LBUG
      [  327.529917] CPU: 1 PID: 11097 Comm: llog_process_th Kdump: loaded Tainted: G           OE     5.4.159-vm-debug #1
      [  327.531769] Hardware name: Bochs Bochs, BIOS Bochs 01/01/2011
      [  327.532620] Call Trace:
      [  327.533189]  dump_stack+0x71/0x98
      [  327.533735]  panic+0x107/0x2f6
      [  327.534478]  ? lbug_with_loc+0x43/0x80 [libcfs]
      [  327.535220]  lbug_with_loc.cold+0x18/0x18 [libcfs]
      [  327.536072]  lod_add_device+0xdea/0x11d0 [lod]
      [  327.536797]  ? simple_strtoul+0x8a/0xa0
      [  327.537454]  lod_process_config+0xea9/0xf90 [lod]
      [  327.538384]  obd_process_config.constprop.0+0x108/0x1a0 [obdclass]
      [  327.539392]  class_process_config+0x22df/0x3090 [obdclass]
      [  327.540199]  ? class_config_llog_handler+0x879/0x1420 [obdclass]
      [  327.541141]  ? trace_kmalloc+0xa8/0x100
      [  327.541723]  ? __kmalloc+0x161/0x300
      [  327.542413]  class_config_llog_handler+0x97f/0x1420 [obdclass]
      [  327.543385]  llog_process_thread+0xabe/0x19e0 [obdclass]
      [  327.543987]  ? keys_fill+0xbe/0x110 [obdclass]
      [  327.544613]  llog_process_thread_daemonize+0xa0/0xe0 [obdclass]
      [  327.545754]  ? llog_backup+0x530/0x530 [obdclass]
      [  327.546424]  kthread+0x134/0x150
      [  327.546745]  ? __kthread_bind_mask+0x60/0x60
      [  327.547520]  ret_from_fork+0x24/0x50
       

            dongyang Dongyang Li
            green Oleg Drokin
            Votes:
            0 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved: