LU-15231 lod: make sure obd device is set up

In lod_add_device(), we could find a obd device which
failed the class_setup() and not yet cleaned up.
Using this kind of obd device could trigger the
assertion
LASSERT(obd->obd_lu_dev->ld_site == lod->lod_dt_dev.dd_lu_dev.ld_site);

Fix another issue where if an obd device failed class_setup,
currently there's no error handling and cleanup/tear down.
e.g. if osp_init0 fails during mount, as a result class_setup() fails
but the obd device remains and have an active reference on osp module,
making lustre_rmmod impossible and mount fails with EEXIST as the
obd device is already there.

Change-Id: I0c5d38a1087107cc9de6eaea0d7dc28ed40a9a6a
Signed-off-by: Li Dongyang <dongyangli@ddn.com>
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/60811
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Reviewed-by: Mikhail Pershin <mpershin@whamcloud.com>
Reviewed-by: Lai Siyao <lai.siyao@whamcloud.com>